--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-awesome-comments",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Comments component for react native",
   "main": "index.js",
   "directories": {
@@ -8,6 +8,10 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hatchyard/react-native-awesome-comments.git"
   },
   "keywords": [
     "react-native",
