--- a/examples/package.json
+++ b/examples/package.json
@@ -13,6 +13,7 @@
     "react": "16.8.3",
     "react-native": "0.58.6",
     "react-native-collapsible": "^1.4.0",
+    "react-native-modal": "9.0.0",
     "react-native-comments": "file:../react-native-awesome-comments-1.0.0.tgz"
   },
   "devDependencies": {
