--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
-    "react-native-collapsible": "^1.4.0"
+    "react-native-collapsible": "^1.4.0",
+    "react-native-modal": "9.0.0"
   },
   "peerDependency": {
     "react": "16.8.3",
